[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"

[profile.release]
debug = true
