[package]
name = "lucid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"
rand = "0.8.5"
rand_distr = "0.4.3"
spin_sleep = "1.1.1"
clap = { version = "4.2.3", features = ["derive"] }
indicatif = "0.17.3"
statrs = "0.16.0"
tabled = "0.8.0"
csv = "1.2.1"
serde = { version = "1.0.160", features = ["derive"] }

[profile.release]
debug = true
